--- a/Bill.csproj
+++ b/Bill.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Frontend\" />
+  </ItemGroup>
+
 </Project>
